--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,7 @@ authors = [{ name = "Your Name", email = "your@email.com" }]
 license = "MIT"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = [
-    "requests>=2.31.0",
-    "pydantic>=2.0",    # для моделей и валидации
-]
+dependencies = ["requests>=2.31.0", "pydantic>=2.0", "dotenv>=0.9.9"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
