--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,13 @@ authors = [{ name = "Your Name", email = "your@email.com" }]
 license = "MIT"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = ["requests>=2.31.0", "pydantic>=2.0", "dotenv>=0.9.9"]
+dependencies = [
+    "requests>=2.31.0",
+    "pydantic>=2.0",
+    "dotenv>=0.9.9",
+    "pytest>=8.0.0",
+    "pytest-mock>=3.12.0"
+]
 
 [build-system]
 requires = ["setuptools", "wheel"]
