--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,8 @@
 [project]
 name = "vaiz-sdk"
-version = "0.1.4"
+version = "0.1.5"
 description = "Official SDK for interacting with the Vaiz API"
-authors = [
-    { name = "Vaiz", email = "mail@vaiz.com" }
-]
+authors = [{ name = "Vaiz", email = "mail@vaiz.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.8"
@@ -23,17 +21,10 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-dependencies = [
-    "requests>=2.31.0",
-    "pydantic>=2.0",
-    "python-dotenv>=0.9.0"
-]
+dependencies = ["requests>=2.31.0", "pydantic>=2.0", "python-dotenv>=0.9.0"]
 
 [project.optional-dependencies]
-dev = [
-    "pytest>=8.0.0",
-    "pytest-mock>=3.12.0"
-]
+dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]
 
 [project.urls]
 Homepage = "https://github.com/vaizcom/vaiz-python-sdk"
