--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "vaiz-sdk"
-version = "0.3.2"
+version = "0.4.0"
 description = "Official SDK for interacting with the Vaiz API"
 authors = [{ name = "Vaiz", email = "mail@vaiz.com" }]
 license = "MIT"
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries",
     "Programming Language :: Python :: 3",
