--- a/vaiz-ts-sdk/package.json
+++ b/vaiz-ts-sdk/package.json
@@ -16,9 +16,11 @@
     "@types/node": "^24.0.14",
     "jest": "^30.0.4",
     "jest-fetch-mock": "^3.0.3",
+    "jest-util": "^30.0.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "packageManager": "yarn@4.3.1+sha512.af78262d7d125afbfeed740602ace8c5e4405cd7f4735c08feb327286b2fdb2390fbca01589bfd1f50b1240548b74806767f5a063c94b67e431aabd0d86f7774"
 }
