Enhance Vercel configuration for Docusaurus deployment
- Added trailingSlash option set to false for cleaner URLs.
- Implemented rewrites to direct all paths to index.html for improved routing.

--- a/docs-site/vercel.json
+++ b/docs-site/vercel.json
@@ -2,6 +2,13 @@
   "buildCommand": "npm run build",
   "outputDirectory": "build",
   "framework": "docusaurus",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "trailingSlash": false,
+  "rewrites": [
+    {
+      "source": "/:path*",
+      "destination": "/index.html"
+    }
+  ]
 }
 
