--- a/docs-site/vercel.json
+++ b/docs-site/vercel.json
@@ -4,9 +4,29 @@
   "framework": "docusaurus",
   "installCommand": "npm install",
   "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/robots.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain"
+        }
+      ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
-      "source": "/:path*",
+      "source": "/:path((?!robots\\.txt|sitemap\\.xml|_next|api|static|assets|img|.*\\..*).*)",
       "destination": "/index.html"
     }
   ]
