feat: Add integration test for image uploads with captions
- Introduced a new integration test to validate the functionality of adding images with captions to existing documents.
- Updated `pyproject.toml` to include a new pytest marker for integration tests.
- Enhanced the test suite for better coverage of image handling in documents.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,8 @@ exclude = ["tests*", "examples*"]
 
 [tool.setuptools.package-data]
 vaiz = ["py.typed"]
+
+[tool.pytest.ini_options]
+markers = [
+    "integration: marks tests as integration tests (require real API credentials)",
+]
